@@ -28,6 +28,8 @@ Date:
         - Fix icon rendering.
         - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
         - Modify text colors for highlighted rows in dark mode to improve readability.
+    Internal changes:
+        - Enable mod-fixes for the data, data-updates, and data-final-fixes files.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.14.0
 Date: June 15th 2025
